--- a/templates/comments/opened_comments.html
+++ b/templates/comments/opened_comments.html
@@ -1,5 +1,6 @@
+{% load custom_filters %}
 
-{% if convention.display_options.display_comments_summary and opened_comments.count %}
+{% if convention|display_comments_summary and opened_comments.count %}
     <div role="alert" class="fr-alert fr-alert--info fr-my-3w">
         <div class="block--row-strech" id="{{object_field}}_div">
             <div class="block--row-strech-1">
