--- a/templates/common/nav_bar.html
+++ b/templates/common/nav_bar.html
@@ -1,10 +1,12 @@
-{% if convention.display_options.display_is_validated %}
+{% load custom_filters %}
+
+{% if convention|display_is_validated %}
     <div class="fr-container">
         <div class="fr-col-12">
             <nav class="fr-nav" id="recap_navigation" role="navigation" aria-label="Menu principal">
                 <ul class="fr-nav__list">
                     <li class="fr-nav__item">
-                        {% if convention.display_options.display_redirect_post_action %}
+                        {% if convention|display_redirect_post_action %}
                             <a class="fr-nav__link" href="{% url 'conventions:post_action' convention_uuid=convention.uuid %}" target="_self" {% if convention_form_step == 12 %}aria-current="page"{% endif %}>Vue d'ensemble</a>
                         {% else %}
                             <a class="fr-nav__link" href="{% url 'conventions:sent' convention_uuid=convention.uuid %}" target="_self" {% if convention_form_step == 12 %}aria-current="page"{% endif %}>Vue d'ensemble</a>
