--- a/templates/conventions/actions/back_to_instruction.html
+++ b/templates/conventions/actions/back_to_instruction.html
@@ -1,3 +1,5 @@
+{% load custom_filters %}
+
 <div class="fr-col-12">
     <div class="block--row-strech fr-my-2w">
         <div class="block--row-strech-1 fr-my-2w fr-mr-6w">
@@ -5,7 +7,7 @@
                 Repasser cette convention en "A instruire"
             </p>
             <p>
-                Cette convention est {% if convention.display_options.display_redirect_sent %}en attente de signature{% else %}déjà signée{% endif %}. Cependant,
+                Cette convention est {% if convention|display_redirect_sent %}en attente de signature{% else %}déjà signée{% endif %}. Cependant,
                 s'il reste des modifications à apporter, vous avez la possibilité de la repasser en statut "A instruire".
                 en cliquant sur le bouton ci-dessous
             </p>
