--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -4,6 +4,8 @@
 
 {% load static %}
 
+{% load custom_filters %}
+
 {% block javascript_extras %}
     <script src="{% static "dropzonejs/min/dropzone.min.js" %}" nonce="{{request.csp_nonce}}"></script>
     <script src="{% static "dropzonejs/min/dropzone-amd-module.min.js" %}" nonce="{{request.csp_nonce}}"></script>
@@ -128,7 +130,7 @@
                             <table>
                                 <thead>
                                     <tr>
-                                        {% if convention.display_options.display_comments %}
+                                        {% if convention|display_comments %}
                                             {% include 'common/utils/comments_header.html' with object_name='reference_cadastrale' label='Références cadastrales' %}
                                         {% endif %}
                                         <th scope="col">Section {% if formset.total_form_count %}{% include "common/form/required_field_star.html" %}{% endif %}</th>
@@ -141,7 +143,7 @@
                                     {% for form_cadastre in formset %}
                                         {% with main_object_field="reference_cadastrale__uuid__"|add:form_cadastre.uuid.value %}
                                             <tr id="{{form_cadastre.uuid.id_for_label}}_group">
-                                                {% if convention.display_options.display_comments %}
+                                                {% if convention|display_comments %}
                                                     <td id="{{form_cadastre.uuid.id_for_label}}_div">
                                                         {% include 'common/utils/comments_field.html' with object_field=main_object_field form_input=form_cadastre.uuid %}
                                                     </td>
