--- a/templates/conventions/common/form_stationnements.html
+++ b/templates/conventions/common/form_stationnements.html
@@ -1,4 +1,7 @@
+{% load custom_filters %}
+
 {% csrf_token %}
+
 <div class="fr-grid-row fr-grid-row--gutters">
     <div class="fr-col-md-12">
 
@@ -26,7 +29,7 @@
             <table>
                 <thead>
                     <tr>
-                        {% if convention.display_options.display_comments %}
+                        {% if convention|display_comments %}
                             {% include 'common/utils/comments_header.html' with object_name='type_stationnement' label='Types de stationnement' %}
                         {% endif %}
                         <th scope="col" class="col__width--150">Type de stationnement {% if formset.total_form_count %}{% include "common/form/required_field_star.html" %}{% endif %}</th>
@@ -38,7 +41,7 @@
                     {% for form in formset %}
                         {% with main_object_field="type_stationnement__uuid__"|add:form.uuid.value %}
                             <tr id="{{form.uuid.id_for_label}}_group">
-                                {% if convention.display_options.display_comments %}
+                                {% if convention|display_comments %}
                                     <td id="{{form.uuid.id_for_label}}_div">
                                         {% include 'common/utils/comments_field.html' with object_field=main_object_field form_input=form.uuid %}
                                     </td>
