--- a/templates/conventions/recapitulatif/comments.html
+++ b/templates/conventions/recapitulatif/comments.html
@@ -8,7 +8,7 @@
                             Informations à l'attention du service instructeur
                         </h4>
                     </div>
-                    {% if convention.display_options.display_progress_bar_1 %}
+                    {% if convention|display_convention_form_progressbar %}
                         <a class="fr-link fr-mb-1w" href="{% url 'conventions:comments' convention_uuid=convention.uuid %}" >
                             <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
                         </a>
