--- a/templates/conventions/sent.html
+++ b/templates/conventions/sent.html
@@ -68,7 +68,7 @@
                     </a>
                 </div>
             {% endif %}
-            {% if request|is_instructeur and convention.display_options.display_back_to_instruction %}
+            {% if convention|display_back_to_instruction:request %}
                 <div class="fr-col-12">
                     <div class="fr-mb-2w block--row-strech apilos-line-top">
                         {% include "conventions/actions/back_to_instruction.html" %}
