--- a/static/css/main.css
+++ b/static/css/main.css
@@ -648,6 +648,7 @@ button:not(:disabled).apilos-btn--secondary--red:hover {
  .apilos-colored_status {
   border-radius: 5px;
   border: 1px solid rgba(70, 75, 99, 0.2);
+  white-space: nowrap;
 }
 
 .apilos-colored_status span{
