--- a/static/css/main.css
+++ b/static/css/main.css
@@ -88,6 +88,10 @@ details > summary::-webkit-details-marker {
   border: solid 1px #ccc;
   padding: 15px;
 }
+.apilos-h2-thin {
+  font-size: 2rem ;
+line-height: 2.5rem;
+}
 
 .dz {
   border: dashed !important;
