update: init new design avenant

--- a/templates/conventions/common/avenant_form_header.html
+++ b/templates/conventions/common/avenant_form_header.html
@@ -4,7 +4,7 @@
 
     <div class='fr-pt-2w'>
         <div class="fr-container">
-            <div class="fr-col-12">
+            <div class="fr-col-12 fr-pb-2w">
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-12">
                         <div class="fr-py-3w">
@@ -26,7 +26,7 @@
                         </div>
                     </div>
                 </div>
-                <hr>
+                <div class="apilos-line-top fr-grid-row fr-py-5w"></div>
             </div>
         </div>
     </div>
